# pain-narratives-app-public

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  config.yaml.example  docker-compose.yml  example.yaml  mypy.ini  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: config.toml.example
deploy/: pain-narratives.service
docker/: init-db.sql
docs/: DEFAULT_PROMPTS_GUIDE.md  EDIT_EXPERIMENT_GROUPS_FEATURE.md  EDIT_EXPERIMENT_GROUPS_GUIDE.md  EDIT_EXPERIMENT_GROUPS_QUICKREF.md  EDIT_EXPERIMENT_GROUPS_SUMMARY.md  PROMPTS_MIGRATION_SUMMARY.md  README.md  TRANSLATION_MODEL_CONFIG.md  USER_MANAGEMENT_UI_ENHANCEMENT.md  USER_MANAGEMENT_UI_GUIDE.md  analysis.md  architecture.md  conf.py  configuration.md  deployment.md  experiments.md  improvements.md  operations.md  revision_experiments.md  user_management.md
docs/consolidation/: CONSOLIDATION_PLAN.md  HANDOFF_TO_CLAUDE_CODE.md
docs/improvements/: PERFORMANCE_AND_HARDENING_PLAN.md
docs/revision/: AWS_BEDROCK_SETUP.md  NARRATIVES_INVENTORY.md  REVISION_EXPERIMENTS_PLAN.md  narratives_inventory.csv
notebooks/: 01_pain_narratives_mapping_description_author_demographics.ipynb  02_patient_demographics_for_publication.ipynb  03_expert_feedback_for_publication.ipynb  04_batch_repetitions_data.ipynb  05_real_vs_synthetic.ipynb  06_analyses_consolidation.ipynb  07_cross_model_comparison.ipynb  08_dimension_questionnaire_correlations.ipynb
scripts/: check_translations.py  consolidate_publication_tables.py  debug_translation.py  deploy_ec2.sh  deploy_ec2_fixed.sh  fix_css_error.sh  manage_users.py  migrate_result_json_to_multilang.py  register_user.py  register_user_batch.py  run_all_notebooks.sh  run_app.py  run_batch_evaluation.py  tokens_count.py  user_demo.py
scripts/dev/: build_docs.py  build_multimodel_package.py  build_narratives_inventory.py  build_revision_parquets.py  build_revision_workbook.py  build_synthdim_vs_real_quest.py  format.ps1  manual_exp_group_registration.py  preview_data_real_sample_cleanup.py  probe_ec2_bedrock_access.sh  test.ps1  test_bedrock_smoke.py  test_gpt5_compatibility.py  test_multilingual_display.py  test_multilingual_functionality.py  test_revision_pilot.py  test_translation_comprehensive.py  test_translation_config.py  test_translation_service.py
scripts/migrate/: ingest_expert_feedback.py  ingest_llm_from_db.py  ingest_real_from_xlsx.py  run_all.sh
scripts/setup/: complete_setup.py  init_database.py  init_uv_env.ps1
sql/: batch_progress.sql  debug_queries.sql  experts_ui_master_dimension_evaluation.sql  experts_ui_master_questionnaires.sql  setup_user_prompts.sql  verify_user_prompts.sql
src/pain_narratives/: __init__.py
src/pain_narratives/analysis/: __init__.py  (+1 more)
tests/: conftest.py  fix_prompt_cache.py  test_authentication.py  test_bedrock_client.py  test_cleanup_verification.py  test_config_env_override.py  test_edit_experiment_groups.py  test_integration.py  test_openai_client_basic.py  test_user_management_ui.py  test_user_prompt_current.py  test_yaml_prompts_config.py  verify_imports.py
tests/utils/: test_file_utils.py
(+60 files in other folders)
